--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       100%{background-position:0% 50%;}
     }
     header {
-      position:absolute; top:10px; display:flex; align-items:center; gap:10px;
+      position:absolute; top:10px; left:10px;
+      display:flex; align-items:center; gap:10px;
       color:#fff; font-weight:bold; font-size:20px;
+      z-index:10;
     }
     header img {width:40px;height:40px;border-radius:8px;}
     .floating {
@@ -75,16 +77,16 @@
 <body>
   <!-- Header with idOS logo -->
   <header>
-    <img src="https://idos.network/favicon-32x32.png" alt="idOS">
+    <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" alt="idOS Logo">
     <span>idOS Quiz</span>
   </header>
 
   <!-- Floating logos -->
-  <img src="https://idos.network/favicon-32x32.png" class="floating" style="left:10%;animation-duration:22s;">
-  <img src="https://idos.network/favicon-32x32.png" class="floating" style="left:40%;animation-duration:18s;">
-  <img src="https://idos.network/favicon-32x32.png" class="floating" style="left:70%;animation-duration:25s;">
-  <img src="https://idos.network/favicon-32x32.png" class="floating" style="left:85%;animation-duration:30s;">
-  <img src="https://idos.network/favicon-32x32.png" class="floating" style="left:55%;animation-duration:28s;">
+  <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" class="floating" style="left:10%;animation-duration:22s;">
+  <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" class="floating" style="left:40%;animation-duration:18s;">
+  <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" class="floating" style="left:70%;animation-duration:25s;">
+  <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" class="floating" style="left:85%;animation-duration:30s;">
+  <img src="https://pbs.twimg.com/profile_images/1711744797648541696/l1vB3w9P_400x400.jpg" class="floating" style="left:55%;animation-duration:28s;">
 
   <!-- Quiz Card -->
   <div class="card" id="quizCard">
